--- a/thermo_linear_algebra.ipynb
+++ b/thermo_linear_algebra.ipynb
@@ -9,7 +9,7 @@
     "import thermox\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "from scipy.linalg import solve, inv, expm"
+    "from jax.scipy.linalg import solve, inv, expm"
    ]
   },
   {
@@ -21,7 +21,7 @@
     "2. Thermodynamic matrix inverse: find $A^{-1}$,\n",
     "3. Thermodynamic matrix exponential: find $\\exp{(A)}$.\n",
     "\n",
-    "These algorithms are all based on the multivariate Ornstein-Uhlenbeck process, defined as\n",
+    "These algorithms are all based on extracting statistical information from the multivariate Ornstein-Uhlenbeck process, defined as\n",
     "$$ dx = - A(x - b) dt + \\mathcal{N}(0, 2D) $$"
    ]
   },
@@ -46,11 +46,12 @@
     }
    ],
    "source": [
-    "key = jax.random.PRNGKey(0) # random PRNG key\n",
-    "dimension = 100 # problem size\n",
+    "key = jax.random.PRNGKey(42) # random PRNG key\n",
+    "dimension = 50 # problem size\n",
     "mean = jnp.zeros(dimension) # mean vector\n",
+    "n = 2 * dimension # number of degrees of freedom\n",
     "A = jax.random.normal(key, shape=(dimension, 2*dimension,))\n",
-    "A = A @ A.T # random positive-semi definite matrix from the Wishart distribution\n",
+    "A = (A @ A.T) / n # random positive-semi definite matrix from the Wishart distribution\n",
     "b = jax.random.normal(key, shape=(dimension,))"
    ]
   },
@@ -58,64 +59,33 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Array([-0.04291015,  0.00502984,  0.01298528, -0.00028778, -0.01526742,\n",
-       "       -0.00567479,  0.01533074, -0.01003827, -0.0050336 , -0.00972303,\n",
-       "       -0.01738689, -0.00678701,  0.02312178,  0.00757717, -0.00638804,\n",
-       "        0.00790122, -0.01896622,  0.01315646, -0.02966048, -0.01008006,\n",
-       "        0.00765205, -0.00272523, -0.01280687,  0.01449428, -0.00697023,\n",
-       "        0.00979751,  0.00458921, -0.00285588,  0.01644798, -0.00951699,\n",
-       "        0.01204343, -0.02854497,  0.0011238 , -0.00382948, -0.01173987,\n",
-       "        0.02511922, -0.01580777, -0.02315124,  0.00045882,  0.00419719,\n",
-       "       -0.00103077, -0.01266642,  0.02562701,  0.01339333,  0.02357866,\n",
-       "        0.00899012,  0.00454874, -0.00576508, -0.00708199,  0.00854757,\n",
-       "       -0.00158417,  0.0159873 ,  0.01952366, -0.00064415,  0.0175536 ,\n",
-       "       -0.01097133,  0.00723158,  0.03912605, -0.00986775, -0.01613855,\n",
-       "        0.00183138,  0.03305778, -0.00103753,  0.0260798 , -0.00595791,\n",
-       "        0.02330123,  0.00846258, -0.01343022, -0.00485881,  0.03178912,\n",
-       "       -0.00074369,  0.00890481,  0.02260181, -0.00268303, -0.01658812,\n",
-       "       -0.00831603,  0.005992  ,  0.02071327, -0.01089349,  0.01647349,\n",
-       "        0.01592538,  0.0104038 ,  0.00048463,  0.0155002 , -0.0163208 ,\n",
-       "        0.01583491, -0.01727157,  0.01694203,  0.00860078,  0.01843242,\n",
-       "       -0.00938479, -0.02282023, -0.00845581, -0.01218354,  0.00387424,\n",
-       "       -0.00332724, -0.02928898,  0.01089799,  0.0141703 , -0.02300432],      dtype=float32)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = thermox.linalg.solve(A, b)\n",
-    "x"
+    "x_s = thermox.linalg.solve(A, b)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We know look at the absolute error $||\\bar{x} - A^{-1}b||$:"
+    "We know look at the absolute error $||x_s - x^*||$, using `scipy`'s `solve` function to get the exact solution $x^*$:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||\\bar{x} - A^{-1}b|| =  0.0100456355\n"
+      "||x_s - x*|| =  0.2386516\n"
      ]
     }
    ],
    "source": [
-    "print(r\"||\\bar{x} - A^{-1}b|| = \", jnp.linalg.norm(solve(A,b) - x))"
+    "print(r\"||x_s - x*|| = \", jnp.linalg.norm(x_s - solve(A,b)))"
    ]
   },
   {
@@ -130,9 +100,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "thermo_inv = thermox.linalg.inv(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "||A^{-1} - C(t,t')|| = 1.5911188\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"||A^{-1} - C(t,t')|| =\", jnp.linalg.norm(inv(A) - thermo_inv))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's increase the number of samples to get a better inverse and look at the error again."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "||A^{-1} - C(t,t)|| = 0.46243933\n"
+     ]
+    }
+   ],
+   "source": [
+    "thermo_inv = thermox.linalg.inv(A, num_samples=100000)\n",
+    "print(\"||A^{-1} - C(t,t)|| =\", jnp.linalg.norm(inv(A) - thermo_inv))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It went down! And gathering 10 times more samples only took about twice the time.\n",
+    "\n",
+    "Let us now consider matrix exponentials. Due to the way we obtain the matrix exponentials, the negative exponential $\\exp{(-A)}$ is more easily gathered. This is because the autocovariance function is equal to $\\exp{(-A)}$, when we have $A$ as the drift term of the SDE.\n",
+    "\n",
+    "$$ C(t+\\tau, t) = \\frac{1}{T} \\int_{t_0}^{t_0+T} dt x(t+\\tau) x^\\intercal(t) = \\exp{(-A \\tau)} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thermo_negexp = thermox.linalg.negexpm(A)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "||exp(-A) - C(t+tau,t)||= 11.980379\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(r\"||exp(-A) - C(t+tau,t)||=\", jnp.linalg.norm(expm(-A) - thermo_negexp))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We once again increase the number of samples, which brings the error down."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "||exp(-A) - C(t+tau,t)||= 11.706923\n"
+     ]
+    }
+   ],
+   "source": [
+    "thermo_negexp = thermox.linalg.negexpm(A, num_samples=100000, dt=1)\n",
+    "print(r\"||exp(-A) - C(t+tau,t)||=\", jnp.linalg.norm(expm(-A)- thermo_negexp))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO?? : add notes and code about non-positive matrices for matrix exponentials"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
