rename and cleanup `thermodynamic_linear_algebra` notebook, add readme for examples

--- a/examples/thermodynamic_linear_algebra.ipynb
+++ b/examples/thermodynamic_linear_algebra.ipynb
@@ -16,7 +16,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### In this notebook we show how to run three basic thermodynamic algorithms:\n",
+    "In this notebook we show how to run three basic thermodynamic algorithms, using functions from `thermox.linalg`:\n",
+    "\n",
     "1. Thermodynamic linear solver: find $x$ such that $Ax = b$,\n",
     "2. Thermodynamic matrix inverse: find $A^{-1}$,\n",
     "3. Thermodynamic matrix exponential: find $\\exp{(A)}$.\n",
@@ -153,7 +154,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It went down! And gathering 10 times more samples only took about twice the time.\n",
+    "It went down! And gathering 10 times more samples only took about twice the time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Thermodynamic matrix exponential\n",
     "\n",
     "Let us now consider matrix exponentials. Due to the way we obtain the matrix exponentials, the negative exponential $\\exp{(-A)}$ is more easily gathered. This is because the autocovariance function is equal to $\\exp{(-A)}$, when we have $A$ as the drift term of the SDE.\n",
     "\n",
@@ -168,11 +176,6 @@
    "source": [
     "thermo_negexp = thermox.linalg.negexpm(A)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -215,23 +218,6 @@
     "thermo_negexp = thermox.linalg.negexpm(A, num_samples=100000, dt=1)\n",
     "print(r\"||exp(-A) - C(t+tau,t)||=\", jnp.linalg.norm(expm(-A)- thermo_negexp))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TODO?? : add notes and code about non-positive matrices for matrix exponentials"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
