expnegm in notebook

--- a/examples/thermo_linear_algebra.ipynb
+++ b/examples/thermo_linear_algebra.ipynb
@@ -36,15 +36,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "key = jax.random.PRNGKey(42) # random PRNG key\n",
     "dimension = 50 # problem size\n",
@@ -80,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||x_s - x*|| =  0.2386516\n"
+      "||x_s - x*|| =  0.14343295\n"
      ]
     }
    ],
@@ -116,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||A^{-1} - C(t,t')|| = 1.5911188\n"
+      "||A^{-1} - C(t,t')|| = 1.722403\n"
      ]
     }
    ],
@@ -140,7 +132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||A^{-1} - C(t,t)|| = 0.46243933\n"
+      "||A^{-1} - C(t,t)|| = 0.580714\n"
      ]
     }
    ],
@@ -162,28 +154,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "thermo_negexp = thermox.linalg.negexpm(A)\n"
+    "thermo_negexp = thermox.linalg.expnegm(A)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||exp(-A) - C(t+tau,t)||= 0.6903533\n"
+      "||exp(-A) - C(t+tau,t)||= 0.65356356\n"
      ]
     }
    ],
@@ -200,19 +187,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||exp(-A) - C(t+tau,t)||= 0.21998222\n"
+      "||exp(-A) - C(t+tau,t)||= 0.21104218\n"
      ]
     }
    ],
    "source": [
-    "thermo_negexp = thermox.linalg.negexpm(A, num_samples=100000, dt=1)\n",
+    "thermo_negexp = thermox.linalg.expnegm(A, num_samples=100000, dt=1)\n",
     "print(r\"||exp(-A) - C(t+tau,t)||=\", jnp.linalg.norm(expm(-A)- thermo_negexp))"
    ]
   },
@@ -250,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
