fix names in notebooks

--- a/examples/thermodynamic_linear_algebra.ipynb
+++ b/examples/thermodynamic_linear_algebra.ipynb
@@ -37,15 +37,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "key = jax.random.PRNGKey(42) # random PRNG key\n",
     "dimension = 50 # problem size\n",
@@ -81,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||x_s - x*|| =  0.2386516\n"
+      "||x_s - x*|| =  0.14343248\n"
      ]
     }
    ],
@@ -117,7 +109,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||A^{-1} - C(t,t')|| = 1.5911188\n"
+      "||A^{-1} - C(t,t')|| = 1.7223996\n"
      ]
     }
    ],
@@ -141,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||A^{-1} - C(t,t)|| = 0.46243933\n"
+      "||A^{-1} - C(t,t)|| = 0.5807177\n"
      ]
     }
    ],
@@ -174,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thermo_negexp = thermox.linalg.negexpm(A)\n"
+    "thermo_negexp = thermox.linalg.expnegm(A)\n"
    ]
   },
   {
@@ -186,7 +178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||exp(-A) - C(t+tau,t)||= 0.6903533\n"
+      "||exp(-A) - C(t+tau,t)||= 0.6535645\n"
      ]
     }
    ],
@@ -210,12 +202,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||exp(-A) - C(t+tau,t)||= 0.21998222\n"
+      "||exp(-A) - C(t+tau,t)||= 0.21104243\n"
      ]
     }
    ],
    "source": [
-    "thermo_negexp = thermox.linalg.negexpm(A, num_samples=100000, dt=1)\n",
+    "thermo_negexp = thermox.linalg.expnegm(A, num_samples=100000, dt=1)\n",
     "print(r\"||exp(-A) - C(t+tau,t)||=\", jnp.linalg.norm(expm(-A)- thermo_negexp))"
    ]
   }
