Revert "rename and cleanup `thermodynamic_linear_algebra` + add readme for examples  (#18)"
This reverts commit 6ed598277a0673c9de2fab773c1a38504c683fcd.

--- a/examples/thermo_linear_algebra.ipynb
+++ b/examples/thermo_linear_algebra.ipynb
@@ -16,8 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we show how to run three basic thermodynamic algorithms, using functions from `thermox.linalg`:\n",
-    "\n",
+    "### In this notebook we show how to run three basic thermodynamic algorithms:\n",
     "1. Thermodynamic linear solver: find $x$ such that $Ax = b$,\n",
     "2. Thermodynamic matrix inverse: find $A^{-1}$,\n",
     "3. Thermodynamic matrix exponential: find $\\exp{(A)}$.\n",
@@ -73,11 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD:examples/thermo_linear_algebra.ipynb
       "||x_s - x*|| =  0.14343295\n"
-=======
-      "||x_s - x*|| =  0.14343248\n"
->>>>>>> 397e7f7 (rename and cleanup `thermodynamic_linear_algebra` + add readme for examples  (#18)):examples/thermodynamic_linear_algebra.ipynb
      ]
     }
    ],
@@ -113,11 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD:examples/thermo_linear_algebra.ipynb
       "||A^{-1} - C(t,t')|| = 1.722403\n"
-=======
-      "||A^{-1} - C(t,t')|| = 1.7223996\n"
->>>>>>> 397e7f7 (rename and cleanup `thermodynamic_linear_algebra` + add readme for examples  (#18)):examples/thermodynamic_linear_algebra.ipynb
      ]
     }
    ],
@@ -141,11 +132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD:examples/thermo_linear_algebra.ipynb
       "||A^{-1} - C(t,t)|| = 0.580714\n"
-=======
-      "||A^{-1} - C(t,t)|| = 0.5807177\n"
->>>>>>> 397e7f7 (rename and cleanup `thermodynamic_linear_algebra` + add readme for examples  (#18)):examples/thermodynamic_linear_algebra.ipynb
      ]
     }
    ],
@@ -158,14 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It went down! And gathering 10 times more samples only took about twice the time."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Thermodynamic matrix exponential\n",
+    "It went down! And gathering 10 times more samples only took about twice the time.\n",
     "\n",
     "Let us now consider matrix exponentials. Due to the way we obtain the matrix exponentials, the negative exponential $\\exp{(-A)}$ is more easily gathered. This is because the autocovariance function is equal to $\\exp{(-A)}$, when we have $A$ as the drift term of the SDE.\n",
     "\n",
@@ -178,11 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-<<<<<<< HEAD:examples/thermo_linear_algebra.ipynb
     "thermo_negexp = thermox.linalg.expnegm(A)"
-=======
-    "thermo_negexp = thermox.linalg.expnegm(A)\n"
->>>>>>> 397e7f7 (rename and cleanup `thermodynamic_linear_algebra` + add readme for examples  (#18)):examples/thermodynamic_linear_algebra.ipynb
    ]
   },
   {
@@ -194,11 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD:examples/thermo_linear_algebra.ipynb
       "||exp(-A) - C(t+tau,t)||= 0.65356356\n"
-=======
-      "||exp(-A) - C(t+tau,t)||= 0.6535645\n"
->>>>>>> 397e7f7 (rename and cleanup `thermodynamic_linear_algebra` + add readme for examples  (#18)):examples/thermodynamic_linear_algebra.ipynb
      ]
     }
    ],
@@ -222,11 +194,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD:examples/thermo_linear_algebra.ipynb
       "||exp(-A) - C(t+tau,t)||= 0.21104218\n"
-=======
-      "||exp(-A) - C(t+tau,t)||= 0.21104243\n"
->>>>>>> 397e7f7 (rename and cleanup `thermodynamic_linear_algebra` + add readme for examples  (#18)):examples/thermodynamic_linear_algebra.ipynb
      ]
     }
    ],
@@ -234,6 +202,23 @@
     "thermo_negexp = thermox.linalg.expnegm(A, num_samples=100000, dt=1)\n",
     "print(r\"||exp(-A) - C(t+tau,t)||=\", jnp.linalg.norm(expm(-A)- thermo_negexp))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO?? : add notes and code about non-positive matrices for matrix exponentials"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
