--- a/examples/thermo_linear_algebra.ipynb
+++ b/examples/thermo_linear_algebra.ipynb
@@ -36,7 +36,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    }
+   ],
    "source": [
     "key = jax.random.PRNGKey(42) # random PRNG key\n",
     "dimension = 50 # problem size\n",
@@ -72,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||x_s - x*|| =  0.14343295\n"
+      "||x_s - x*|| =  0.2386516\n"
      ]
     }
    ],
@@ -108,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||A^{-1} - C(t,t')|| = 1.722403\n"
+      "||A^{-1} - C(t,t')|| = 1.5911188\n"
      ]
     }
    ],
@@ -132,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||A^{-1} - C(t,t)|| = 0.580714\n"
+      "||A^{-1} - C(t,t)|| = 0.46243933\n"
      ]
     }
    ],
@@ -154,23 +162,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "thermo_negexp = thermox.linalg.expnegm(A)"
+    "thermo_negexp = thermox.linalg.negexpm(A)\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||exp(-A) - C(t+tau,t)||= 0.65356356\n"
+      "||exp(-A) - C(t+tau,t)||= 0.6903533\n"
      ]
     }
    ],
@@ -187,19 +200,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "||exp(-A) - C(t+tau,t)||= 0.21104218\n"
+      "||exp(-A) - C(t+tau,t)||= 0.21998222\n"
      ]
     }
    ],
    "source": [
-    "thermo_negexp = thermox.linalg.expnegm(A, num_samples=100000, dt=1)\n",
+    "thermo_negexp = thermox.linalg.negexpm(A, num_samples=100000, dt=1)\n",
     "print(r\"||exp(-A) - C(t+tau,t)||=\", jnp.linalg.norm(expm(-A)- thermo_negexp))"
    ]
   },
@@ -237,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
