--- a/examples/associative_scan.ipynb
+++ b/examples/associative_scan.ipynb
@@ -29,7 +29,7 @@
     "$$\n",
     "dx = -A(x-b)dt + \\mathcal{N}(0, Ddt)\n",
     "$$\n",
-    "and compare `thermox` with and without an associative scan. This enables one to parallelize the time steps the solver takes, and have a complexity in $O(T/p + log(T))$ for $p$ cores and $T$ timesteps. "
+    "and compare `thermox` with and without an associative scan. This enables one to parallelize the time steps the solver takes, and have a complexity in $O(T/p + log(T))$ for $p$ cores and $T$ timesteps."
    ]
   },
   {
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following script runs `thermox.sample` with and without associative scan, for up to 10 million time steps (takes $\\sim3$ minutes to run on an A100)."
+    "The following script runs `thermox.sample` with and without associative scan, for up to $\\sim1.5$ million time steps (takes $\\sim3$ minutes to run on an A100)."
    ]
   },
   {
@@ -216,7 +216,7 @@
     "\n",
     "# Remove top and right spines\n",
     "plt.gca().spines[\"top\"].set_visible(False)\n",
-    "plt.gca().spines[\"right\"].set_visible(False)\n"
+    "plt.gca().spines[\"right\"].set_visible(False)"
    ]
   },
   {
