Move sample and prob to top of file

--- a/examples/associative_scan.ipynb
+++ b/examples/associative_scan.ipynb
@@ -29,7 +29,7 @@
     "$$\n",
     "dx = -A(x-b)dt + \\mathcal{N}(0, Ddt)\n",
     "$$\n",
-    "and compare `thermox` with and without an associative scan. This enables one to parallelize the time steps the solver takes, and have a complexity in $O(T/p + log(T))$ for $p$ cores and $T$ timesteps."
+    "and compare `thermox` with and without an associative scan. This enables one to parallelize the time steps the solver takes, and have a complexity in $O(T/p + \\log(T))$ for $p$ cores and $T$ timesteps."
    ]
   },
   {
